--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6579,6 +6579,51 @@ $toolbar-height-small: 46px;
   overflow: hidden;
 }
 
+.hero-slider{
+  .slick-prev, .slick-next {
+    background: center center;
+    background-repeat: no-repeat;
+    height: 32px;
+    z-index: 2;
+    &.slick-disabled {
+      opacity: 0;
+    }
+  }
+  .slick-prev {
+    left: 24px;
+    background-image: url("data:image/svg+xml,%3Csvg width='18' height='35' viewBox='0 0 18 35' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 1.5L1 17.5L17 33.5' stroke='black' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  }
+  .slick-next {
+    right: 24px;
+    background-image: url("data:image/svg+xml,%3Csvg width='18' height='35' viewBox='0 0 18 35' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1.5L17 17.5L1 33.5' stroke='black' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  }
+  
+  .slick-dots {
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    transform: translateX(-50%);
+    li {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      border: 1.25px solid #000000;
+      margin: 0 8px;
+      &.slick-active {
+        background: #000000;
+      }
+      button::before {
+        display: none;
+      }
+    }
+  }
+  @include media-query($medium-down) {
+    .slick-prev, .slick-next {
+      display: none !important;
+    }
+  }
+}
+
 
 
 
@@ -6601,48 +6646,48 @@ $toolbar-height-small: 46px;
 }
 
 .hero--x-small {
-   height: 350px;
+   height: 350px !important;
 }
 
 .hero--small {
-  height: 225px;
+  height: 225px !important;
 }
 
 .hero--medium {
-  height: 357px;
+  height: 357px !important;
 }
 
 .hero--large {
-  height: 488px;
+  height: 488px !important;
 }
 
 .hero--x-large {
-  height: 582px;
+  height: 582px !important;
 }
 
 .hero--full-size {
-  height: 100vh;
+  height: 100vh !important;
 }
 
 @include media-query($medium-up) {
   .hero--x-small {
-   height: 350px;
+   height: 350px !important;
   }
 
   .hero--small {
-    height: 300px;
+    height: 300px !important;
   }
 
   .hero--medium {
-    height: 475px;
+    height: 475px !important;
   }
 
   .hero--large {
-    height: 650px;
+    height: 650px !important;
   }
 
   .hero--x-large {
-    height: 1000px;
+    height: 1000px !important;
   }
 }
 
@@ -6706,7 +6751,7 @@ $toolbar-height-small: 46px;
   color: #000;
 
   @include media-query($medium-up) {
-  	 padding: 0 40px;
+  	 padding: 0 80px;
   }
   @include media-query($small) {
   	text-align: center !important;
