[+] Hero - hide dots if single

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6612,6 +6612,9 @@ $toolbar-height-small: 46px;
       &.slick-active {
         background: #000000;
       }
+      &:first-of-type:last-of-type {
+        display: none;
+      }
       button::before {
         display: none;
       }
