--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -39,7 +39,8 @@
                   height="100%" width="100%" 
                   frameBorder="0" 
                   allow="autoplay; fullscreen"
-                  allowfullscreen>
+                  allowfullscreen
+                  >
         </iframe>
       </div>
     {%endif%}
@@ -77,7 +78,7 @@
           {
             "type": "video_url",
             "id": "video",
-        "accept": ["youtube", "vimeo"],
+            "accept": ["youtube", "vimeo"],
             "label": "Video"
           },
           {
