--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -2,7 +2,14 @@
   <meta itemprop="name" content="{{ product.title }}">
   <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
   <meta itemprop="image" content="{{ product.featured_image.src | img_url: '800x' }}">
-
+  
+  <ul class="breadcrumbs">
+    <li class="breadcrumbs__item"><a href="/">Home</a></li>
+    <li class="breadcrumbs__item"><a href="{{ collection.url }}">{{ collection.title }}</a></li>
+    <li class="breadcrumbs__item"><a href="{{ product.url }}">{{ product.title }}</a></li>
+  </ul>  
+  
+  
   {% comment %}
     Get first variant, or deep linked one
   {% endcomment %}
