[BF] PLP Filter accordeon hiding other elements

--- a/assets/bc-sf-filter.scss.liquid
+++ b/assets/bc-sf-filter.scss.liquid
@@ -134,6 +134,7 @@ $searchBoxMobileHeight: 50px;
 }
 #bc-sf-filter-tree-h .bc-sf-filter-option-block .bc-sf-filter-block-content{
 	border: none;
+  position: static;
 }
 #bc-sf-filter-tree-h .bc-sf-filter-option-block .bc-sf-filter-block-content .bc-sf-filter-select-button{
 	    width: 170px;
@@ -154,7 +155,6 @@ $searchBoxMobileHeight: 50px;
   	margin-right: 8px;
 }
 #bc-sf-filter-tree-h .bc-sf-filter-block-content .bc-sf-filter-option-range-amount input {
-    width: 162px;
     height: 28px;
     font-size: 14px;
     text-align: center;
