--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -1,4 +1,4 @@
-<div class="hero-wrapper hero-slider">
+<div class="hero-wrapper hero-slider" id="hero">
   {% for block in section.blocks %}
     {%if block.settings.image%}
       <div class="hero hero--{{ block.settings.hero_size }} box ratio-container lazyload js" id="hero" 
